Update windows+linux.md